--- a/.github/workflows/android_zhukov.yml
+++ b/.github/workflows/android_zhukov.yml
@@ -24,5 +24,8 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
